[package]
name = "surf-retry"
version = "0.1.0"
description = "A retry middleware for surf"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/surf-governor.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["retry", "middleware", "surf"]
categories = [
    "web-programming::http-client"
]
edition = "2021"

[dependencies]
async-std = "1.11.0"
chrono = { version = "0.4.19", features = ["clock"], default-features = false }
http-types = "2.12.0"
httpdate = "1.0.2"
retry-policies = "0.1.1"
surf = "2.3.2"

[dev-dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
surf-governor = "0.1.0"
url = "2.2.2"
wiremock = "0.5.13"
