[package]
    name = "surf-retry"
    version = "0.2.1"
    description = "A retry middleware for surf"
    authors = ["Christian Haynes <06chaynes@gmail.com>"]
    repository = "https://github.com/06chaynes/surf-retry.git"
    license = "MIT OR Apache-2.0"
    readme = "README.md"
    keywords = ["retry", "middleware", "surf"]
    categories = [
        "web-programming::http-client",
    ]
    edition = "2021"
    rust-version = "1.59.0"

[features]
    default   = ["async-std"]
    wasm      = ["dep:tokio"]
    tokio     = ["dep:tokio"]
    async-std = ["dep:async-std"]

[dependencies]
    async-std = { version = "1.12.0", optional = true }
    tokio = { version = "1.24.2", features = ["time"], optional = true }
    chrono = { version = "0.4.23", features = [
        "clock",
    ], default-features = false }
    http-types = "2.12.0"
    httpdate = "1.0.2"
    retry-policies = "0.1.2"
    surf = { version = "2.3.2", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
    getrandom = { version = "0.2.8", features = ["js"] }

[dev-dependencies]
    async-std     = { version = "1.12.0", features = ["attributes"] }
    surf-governor = "0.1.2"
    url           = "2.3.1"
    wiremock      = "0.5.15"
